[gd_scene load_steps=8 format=3 uid="uid://oskltuu54und"]

[ext_resource type="Script" path="res://src/ui/death/death_screen.gd" id="1_ugqrj"]
[ext_resource type="AudioStream" uid="uid://dpftmeufvcwmn" path="res://asset/snd/10287 - Sci-Fi Alien Interface Sound Effects Pack/Sci-Fi Alien Interface Transition Sound 2.wav" id="2_3ymss"]
[ext_resource type="AudioStream" uid="uid://cdljqjsm5lot5" path="res://asset/snd/10287 - Sci-Fi Alien Interface Sound Effects Pack/Sci-Fi Alien Interface Error Sound 3.wav" id="2_o7i3w"]
[ext_resource type="AudioStream" uid="uid://deq57glwxblhk" path="res://asset/snd/10287 - Sci-Fi Alien Interface Sound Effects Pack/Sci-Fi Alien Interface Pop-Up Sound 2.wav" id="3_ncmuw"]
[ext_resource type="PackedScene" uid="uid://cffj2cxc154f2" path="res://src/ui/popup/popup.tscn" id="4_bbwlb"]
[ext_resource type="AudioStream" uid="uid://cul2ek767wy42" path="res://asset/snd/10287 - Sci-Fi Alien Interface Sound Effects Pack/Sci-Fi Alien Interface Sound 2.wav" id="5_67bde"]
[ext_resource type="AudioStream" uid="uid://doasgi164mq1g" path="res://asset/snd/10287 - Sci-Fi Alien Interface Sound Effects Pack/Sci-Fi Alien Interface Sound 4.wav" id="6_ximbn"]

[node name="death_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugqrj")

[node name="snd_game" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3ymss")
bus = &"sfx"

[node name="snd_popup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ncmuw")
bus = &"sfx"

[node name="snd_start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3ymss")
bus = &"sfx"

[node name="snd_exit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_o7i3w")
bus = &"sfx"

[node name="snd_back" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_67bde")
bus = &"sfx"

[node name="snd_nav" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ximbn")
bus = &"sfx"

[node name="center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="PanelContainer" parent="center"]
layout_mode = 2

[node name="margin" type="MarginContainer" parent="center/panel"]
layout_mode = 2

[node name="tabs" type="TabContainer" parent="center/panel/margin"]
layout_mode = 2
tabs_visible = false

[node name="vBox" type="VBoxContainer" parent="center/panel/margin/tabs"]
layout_mode = 2

[node name="label" type="Label" parent="center/panel/margin/tabs/vBox"]
layout_mode = 2
text = "You are Dead"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="restart" type="Button" parent="center/panel/margin/tabs/vBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
text = "Restart"

[node name="start_menu" type="Button" parent="center/panel/margin/tabs/vBox"]
layout_mode = 2
text = "Start Menu"

[node name="exit" type="Button" parent="center/panel/margin/tabs/vBox"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../restart")
text = "Exit"

[node name="popup" parent="center/panel/margin/tabs" instance=ExtResource("4_bbwlb")]
visible = false
layout_mode = 2

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="draw" from="center/panel/margin/tabs/vBox" to="." method="_on_v_box_draw"]
[connection signal="focus_entered" from="center/panel/margin/tabs/vBox/restart" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/vBox/restart" to="." method="_on_restart_pressed"]
[connection signal="focus_entered" from="center/panel/margin/tabs/vBox/start_menu" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/vBox/start_menu" to="." method="_on_start_menu_pressed"]
[connection signal="focus_entered" from="center/panel/margin/tabs/vBox/exit" to="." method="_on_focus_entered"]
[connection signal="pressed" from="center/panel/margin/tabs/vBox/exit" to="." method="_on_exit_pressed"]
[connection signal="subcontrol_focused" from="center/panel/margin/tabs/popup" to="." method="_on_focus_entered"]
